assets/css/style.css
*{
  margin: 0;
}

#map {
    height: 100vh;
    width: 100%;
  }

.image-overlay {
    position: absolute;
    transform: translate(-50%, -50%) rotate(0deg);
    pointer-events: none;
    z-index: 9999;
  }

.slider-container {
    position: absolute;
    top: 10px;
    right: 10px;
    background-color: white;
    padding: 10px;
    border-radius: 5px;
    box-shadow: 0 2px 6px rgba(0, 0, 0, 0.2);
    z-index: 1000;
  }

.slider-container label {
    display: block;
    margin-bottom: 5px;
  }

.bottom-message {
    position: fixed;
    bottom: 10px;
    left: 50%;
    transform: translateX(-50%);
    background-color: rgba(0, 0, 0, 0.7);
    color: white;
    padding: 10px 20px;
    border-radius: 5px;
    font-size: 14px;
    box-shadow: 0 2px 6px rgba(0, 0, 0, 0.2);
    z-index: 1000;
    text-align: center;
  }

a:link {
  color: white;
}

a:visited {
  color: white;
}

a:hover {
  color: lightgray;
}

a:active {
  color: white;
}

.leaflet-control-zoom-in,
.leaflet-control-zoom-out{
  color: black !important;
}

